# Redis-in-Android

./: .gitattributes  .gitignore  00-RELEASENOTES  BUGS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  MANIFESTO  README.md  SECURITY.md  TLS.md  acl.c  build_android.py  hdr_atomic.h  redis.conf  runtest  runtest-cluster  runtest-moduleapi  runtest-sentinel  sentinel.conf
src/: CMakeLists.txt  Makefile  acl.json  adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c  android.toolchain.cmake  android_cmake_build.py  anet.c  anet.h  aof.c  asciilogo.h  atomicvar.h  bio.c  bio.h  bitops.c  blocked.c  call_reply.c  call_reply.h  childinfo.c  cli_common.c  cli_common.h  cluster.c  cluster.h  commands.c  config.c  config.h  connection.c  connection.h  connhelpers.h  crc16.c  crc16_slottable.h  crc64.c  crc64.h  crcspeed.c  (+126 more)
src/commands/: acl-cat.json  acl-deluser.json  acl-dryrun.json  acl-genpass.json  acl-getuser.json  acl-help.json  acl-list.json  acl-load.json  acl-log.json  acl-save.json  acl-setuser.json  acl-users.json  acl-whoami.json  append.json  asking.json  auth.json  bgrewriteaof.json  bgsave.json  bitcount.json  bitfield.json  bitfield_ro.json  bitop.json  bitpos.json  blmove.json  blmpop.json  blpop.json  brpop.json  brpoplpush.json  bzmpop.json  bzpopmax.json  bzpopmin.json  client-caching.json  client-getname.json  client-getredir.json  client-help.json  client-id.json  client-info.json  client-kill.json  client-list.json  client-no-evict.json  (+347 more)
src/modules/: Makefile  helloblock.c  hellocluster.c  hellodict.c  hellohook.c  hellotimer.c  hellotype.c  helloworld.c
src/tools/: android.toolchain.cmake
